// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`regnskapRad > mapper avviklingsregnskap m/manglende felter 1`] = `
{
  "aarsresultat": -500000,
  "avviklingsregnskap": true,
  "brreg_regnskap_id": null,
  "driftsinntekter": null,
  "driftsresultat": null,
  "fravalg_revisjon": null,
  "ikke_revidert_aarsregnskap": null,
  "journalnr": null,
  "morselskap": null,
  "oppstillingsplan": null,
  "organisasjonsnummer": "555555555",
  "raw_data": null,
  "regnskap_dokumenttype": null,
  "regnskapsaar": 2021,
  "regnskapsperiode_fra": "2021-01-01",
  "regnskapsperiode_til": "2021-06-30",
  "regnskapsregler": null,
  "regnskapstype": "SELSKAP",
  "smaa_foretak": null,
  "sum_anleggsmidler": null,
  "sum_driftskostnad": null,
  "sum_egenkapital": null,
  "sum_egenkapital_gjeld": null,
  "sum_eiendeler": null,
  "sum_finansinntekter": null,
  "sum_finanskostnad": null,
  "sum_gjeld": null,
  "sum_omloepsmidler": null,
  "valuta": "NOK",
}
`;

exports[`regnskapRad > mapper småforetak m/fravalg revisjon 1`] = `
{
  "aarsresultat": 80000,
  "avviklingsregnskap": null,
  "brreg_regnskap_id": 22,
  "driftsinntekter": 2000000,
  "driftsresultat": 100000,
  "fravalg_revisjon": true,
  "ikke_revidert_aarsregnskap": null,
  "journalnr": null,
  "morselskap": null,
  "oppstillingsplan": null,
  "organisasjonsnummer": "987654321",
  "raw_data": null,
  "regnskap_dokumenttype": null,
  "regnskapsaar": 2022,
  "regnskapsperiode_fra": "2022-01-01",
  "regnskapsperiode_til": "2022-12-31",
  "regnskapsregler": "SMAFORETAK",
  "regnskapstype": "SELSKAP",
  "smaa_foretak": true,
  "sum_anleggsmidler": null,
  "sum_driftskostnad": null,
  "sum_egenkapital": null,
  "sum_egenkapital_gjeld": null,
  "sum_eiendeler": null,
  "sum_finansinntekter": null,
  "sum_finanskostnad": null,
  "sum_gjeld": null,
  "sum_omloepsmidler": null,
  "valuta": "NOK",
}
`;

exports[`regnskapRad > mapper vanlig selskap 1`] = `
{
  "aarsresultat": 9500000,
  "avviklingsregnskap": null,
  "brreg_regnskap_id": 12345678,
  "driftsinntekter": 100000000,
  "driftsresultat": 12000000,
  "fravalg_revisjon": false,
  "ikke_revidert_aarsregnskap": false,
  "journalnr": "JNL-1",
  "morselskap": false,
  "oppstillingsplan": "GENERELL",
  "organisasjonsnummer": "123456789",
  "raw_data": null,
  "regnskap_dokumenttype": "AARSREGNSKAP",
  "regnskapsaar": 2023,
  "regnskapsperiode_fra": "2023-01-01",
  "regnskapsperiode_til": "2023-12-31",
  "regnskapsregler": "REGNSKAPSLOVEN",
  "regnskapstype": "SELSKAP",
  "smaa_foretak": false,
  "sum_anleggsmidler": 30000000,
  "sum_driftskostnad": 88000000,
  "sum_egenkapital": 30000000,
  "sum_egenkapital_gjeld": 50000000,
  "sum_eiendeler": 50000000,
  "sum_finansinntekter": 500000,
  "sum_finanskostnad": 300000,
  "sum_gjeld": 20000000,
  "sum_omloepsmidler": 20000000,
  "valuta": "NOK",
}
`;
